# sbc-man

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD  INSTALL_SETTINGS_IMPLEMENTATION.md  MODULE.bazel  README.md  REFACTORING_SUMMARY.md  bandit.yaml  main.py  refactor_plan.md  refactoring_analysis.md  requirements-dev.txt  requirements.txt  requirements_windows.txt  skills  temp_properties.txt  test_protobuf_migration.py  todo.md
.github/workflows/: cicd.yml  cleanup.yml  release.yml  security-bandit.yml  static_pages.yml
data/: config.json
data/games/: local_games.json
docs/: core_arch.txt  files.txt  fish-0.1.0-py3-none-any.whl  fish-0.1.1-py3-none-any.whl  fish-0.1.2-py3-none-any.whl  fish-0.1.3-py3-none-any.whl  fish-0.1.4-py3-none-any.whl  fish-0.1.5-py3-none-any.whl  fish-0.1.6-py3-none-any.whl  fish-0.1.7-py3-none-any.whl  fish-0.1.8-py3-none-any.whl  games.json  implementation_plan.md  index.html  overview.txt  phase2_completion.md  phase2_scaffolding_progress.md  pyproject.toml  structure.txt
docs/code/: class_hardware_config_loader.txt  class_hardware_detector.txt  class_models_config_manager.txt  class_services_file_ops.txt  class_services_network.txt  class_services_process_launcher.txt  class_states_playing_state.txt  class_states_settings_state.txt  class_view_widgets_button.txt  class_view_widgets_game_card.txt  class_view_widgets_grid.txt  class_view_widgets_list.txt  class_view_widgets_progress_bar.txt  class_views_game_list_view.txt  class_views_menu_view.txt  config_hierarchy.txt  config_input_mappings.txt  config_os_types.txt
docs/ideas/: handheld-emulation-device-documentation.odt  paths.txt  portmaster-installer-analysis.docx
docs/other/: deps.txt  dev_workflow.txt  download_tracking.txt  game_install.txt  game_save.txt  hardware_detect_fail.txt  input_event.txt  int_test.txt  manual_test.txt  model_view.txt  new_states.txt  packing.txt  prompt.txt  runtime_errors.txt  state_pattern.txt  state_transition.txt  unit_tests.txt
docs/skills/: py.txt
google/: BUILD  LICENSE
installer/: maxbloks_installer.sh
internal/docs/: inventory_and_analysis.md  key_design.txt  phase0_completion.md  phase1_approach_refinement.md  phase3_completion.md  phase3_final_summary.md  phase8_pull_request_complete.md  split_tests.txt
internal/proto/: BUILD  person.proto  person_test.py
proto/: BUILD  game.proto  person_test.py
sbcman/: BUILD  __init__.py  main.py
sbcman/core/: BUILD  __init__.py  application.py  game_loop.py  state_manager.py
sbcman/data/: config.json  games.json
sbcman/hardware/: BUILD  __init__.py  compat_sdl.py  config_loader.py  detector.py  paths.py  prober.py
sbcman/models/: BUILD  __init__.py  config_manager.py  download_manager.py  game.py  game_library.py  game_utils.py
sbcman/path/: BUILD  device.py  paths.py
sbcman/proto/: BUILD  __init__.py  device_config.proto  device_config_pb2.py  game.proto  game_pb2.py  input_mappings.proto  input_mappings_pb2.py  os_config.proto  os_config_pb2.py
sbcman/services/: BUILD  __init__.py  archive_extractor.py  config_manager.py  download_manager.py  file_ops.py  game_launcher.py  game_library.py  game_list_entry.py  game_utils.py  input_handler.py  install_game.py  network.py  portmaster.py  process_launcher.py  updater.py  wheel_installer.py
sbcman/states/: BUILD  __init__.py  base_state.py  download_state.py  game_list_state.py  install_settings_state.py  menu_state.py  playing_state.py  settings_state.py  update_state.py
sbcman/views/: BUILD  __init__.py
services/: BUILD  __init__.py
src/: BUILD  main.py
src/core/: BUILD  __init__.py  application.py  game_loop.py  state_manager.py
src/hardware/: BUILD  __init__.py  config_loader.py  detector.py  paths.py  prober.py
src/models/: BUILD  config_manager.py  download_manager.py  game.py  game_library.py
src/services/: BUILD  file_ops.py  input_handler.py  network.py  process_launcher.py
src/states/: BUILD  base_state.py  download_state.py  game_list_state.py  menu_state.py  playing_state.py  settings_state.py
src/views/: BUILD
tests/: BUILD  analyze_tests.py  conftest.py  missing.json  missing.sh  missing_test_targets.py  missing_tests.py  testall.sh
tests/integration/: BUILD  test_download_install_flow.py  test_game_launch_flow.py  test_startup_flow.py  test_state_transition_flow.py
tests/unit/: BUILD  test_application.py  test_archive_extractor.py  test_base_state.py  test_compat_sdl.py  test_config_loader.py  test_config_manager.py  test_device.py  test_download_manager.py  test_download_state.py  test_file_ops.py  test_game.py  test_game_launcher.py  test_game_library.py  test_game_library_enhanced.py  test_game_list_entry.py  test_game_list_state.py  test_game_loop.py  test_game_utils.py  test_hardware_detection.py  test_hardware_detector.py  test_hardware_prober.py  test_input_handler.py  test_install_game.py  test_install_settings_state.py  test_installation_progress.py  test_menu_state.py  test_models.py  test_network.py  test_network_service.py  test_paths.py  test_playing_state.py  test_portmaster.py  test_process_launcher.py  test_progress_bar.py  test_protobuf_api.py  (+10 more)
tools/: BUILD  get_version.sh  git_version.bzl  py_wheel_stamped.bzl  tag.sh  version.bzl  version_gen.bzl
(+70 files in other folders)
