module(
    name = "sbc_man",
    version = "1.0.0",
    compatibility_level = 1,
)

# Bazel module dependencies
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "platforms", version = "0.0.11")

# Python configuration
python_version = "3.11"

# Toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = python_version,
)

# Python configuration
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = python_version,
)

# Third-party dependencies via pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "sbc_man_pip_deps",
    python_version = python_version,
    requirements_lock = "//:requirements.txt",
)

# Development dependencies
pip.parse(
    hub_name = "sbc_man_pip_dev_deps",
    python_version = python_version,
    requirements_lock = "//:requirements-dev.txt",
)

# Make pip repositories visible
use_repo(pip, "sbc_man_pip_deps", "sbc_man_pip_dev_deps")
